1999-09-15  Tim Jenness  <timj@jach.hawaii.edu>

	* Convert.pm: Tidy up documentation. 

1999-09-14  Tim Jenness  <timj@jach.hawaii.edu>

	* Print.pm (err): Allow beeping with orac_err

	* Basic.pm: Add $Beep global variable

1999-09-13  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/GAIA.pm (send_to_gaia): Change zautoscale to 95%

1999-09-03  Tim Jenness  <timj@jach.hawaii.edu>

	* TempFile.pm: Allow for File::MkTemp not being available. 

	* Display/GAIA.pm (configure): Tweak to work with new Gaia (.gaia
	rather than .rtd).

1999-08-31  Tim Jenness  <timj@jach.hawaii.edu>

	* TempFile.pm: KLUGE use of File::MkTemp rather than POSIX tmpnam.

1999-08-27  Tim Jenness  <timj@jach.hawaii.edu>

	* Group/UKIRT.pm: add calc_orac_headers 

	* Group/UFTI.pm (calc_orac_headers): Add calc_orac_headers

1999-08-26  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame.pm (erase): Add file_exists() method.

	* Frame/UKIRT.pm: Move NDF stuff to NDF.pm

	* Frame/JCMT.pm: Move NDF stuff to NDF.pm

	* Core.pm (orac_store_frm_in_correct_grp): Add Grp->readhdr if the 
	Grp file exists.

1999-08-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Group/UKIRT.pm: Inherit from ORAC::Group::NDF

	* Group/UFTI.pm: Inherit from ORAC::Group::NDF

	* Group/JCMT.pm: Inherit from ORAC::Group::NDF

	* Core.pm: Add support for -resume flag.

	* Group.pm: Add support for coadds(), (inc file_exists and erase)

1999-08-24  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm (orac_store_frm_in_correct_grp): Dont set raw()
	explicitly. Set name().

	* Group.pm (file): Automatically set raw() if raw() is undefined.

1999-07-26  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm: Add LWP::Simple

1999-07-08  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/SCUBA.pm (start_algorithm_engines): Add ndf2fits

1999-07-02  Tim Jenness  <timj@jach.hawaii.edu>

	* SCUBA.pm: Change typo from polpack_reg to ccdpack_reg

1999-06-02  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/UKIRT.pm (findrecipe): Fix documentation typo.