@@ -1,3 +1,8 @@
+1999-09-17  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Convert.pm (UKIRTmultindf2hds): Implement UKIRTmultindf2hds
+	method. Change whole module to use File::Spec and File::Basename.
+
 1999-09-15  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Convert.pm: Tidy up documentation. 
